--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,2 @@
-<h2>Reporter output</h2><table><tr><td><a href= 'D:\Eclipse_Workspace\quickstart\src\main\java\com\test\autoset\quickstat\screenshot\testLoginnayan__06_01-2018_02_17_33.png'> <img src='D:\Eclipse_Workspace\quickstart\src\main\java\com\test\autoset\quickstat\screenshot\testLoginnayan__06_01-2018_02_17_33.png' height='100' width ='100'/></a></td></tr>
+<h2>Reporter output</h2><table><tr><td><a href= 'D:\B\quickstart\src\main\java\com\test\autoset\quickstat\screenshot\testLoginnayan__09_01-2018_05_47_54.png'> <img src='D:\B\quickstart\src\main\java\com\test\autoset\quickstat\screenshot\testLoginnayan__09_01-2018_05_47_54.png' height='100' width ='100'/></a></td></tr>
 </table>
