--- a/test-output/old/Regression Suite/methods-alphabetical.html
+++ b/test-output/old/Regression Suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bcfcb">  <td>18/01/03 09:06:26</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC002_verifyRegistration.endTest()[pri:0, instance:com.test.autoset.quickstart.homepage.TC002_verifyRegistration@3fee9989]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>18/01/03 09:05:54</td>   <td>-32563</td> <td>&nbsp;</td><td title="&gt;&gt;TC002_verifyRegistration.setUp()[pri:0, instance:com.test.autoset.quickstart.homepage.TC002_verifyRegistration@3fee9989]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@858242339</td>   <td></td> </tr>
-<tr bgcolor="8bcfcb">  <td>18/01/03 09:06:22</td>   <td>-4730</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_verifyRegistration.verifyRegistrationSuccess()[pri:0, instance:com.test.autoset.quickstart.homepage.TC002_verifyRegistration@3fee9989]">verifyRegistrationSuccess</td> 
-  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>18/01/09 06:36:09</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC002_verifyRegistration.endTest()[pri:0, instance:com.test.autoset.quickstart.homepage.TC002_verifyRegistration@73ad2d6]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>18/01/09 06:34:55</td>   <td>-74788</td> <td>&nbsp;</td><td title="&gt;&gt;TC002_verifyRegistration.setUp()[pri:0, instance:com.test.autoset.quickstart.homepage.TC002_verifyRegistration@73ad2d6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1310540333</td>   <td></td> </tr>
+<tr bgcolor="ee9faa">  <td>18/01/09 06:35:07</td>   <td>-62207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_verifyRegistration.verifyRegistrationSuccess()[pri:0, instance:com.test.autoset.quickstart.homepage.TC002_verifyRegistration@73ad2d6]">verifyRegistrationSuccess</td> 
+  <td>main@1310540333</td>   <td></td> </tr>
 </table>
