--- a/test-output/old/Regression Suite/reporter-output.html
+++ b/test-output/old/Regression Suite/reporter-output.html
@@ -1,1 +1,2 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td><a href= 'D:\B\quickstart\src\main\java\com\test\autoset\quickstat\failure_screenshots\verifyRegistrationSuccess_09_01-2018_06_36_08.png'> <img src='D:\B\quickstart\src\main\java\com\test\autoset\quickstat\failure_screenshots\verifyRegistrationSuccess_09_01-2018_06_36_08.png' height='100' width ='100'/></a></td></tr>
+</table>
